# robot-code-2025

./: .gitignore  README.md  frc  frc.ps1  less-old-graph.json  notes-1.txt  notes-2.txt  notes-3.txt  notes.txt  pyproject.toml
dev-utils/soundboard/: play.py
src/: 80000001pointauto.py  auto_actions.py  config.py  firehouse-apriltags.json  graph.json  old-graph.json  robot.py
src/Commands/: aim_to_score.py
src/autos/: auto_1.py  auto_actions.py
src/commands/: aim_to_score.py  approach_hps.py  approach_reef.py  collect_coral.py  continuous.py  drive_to_pose.py  grab_algae.py  graph_pathfind.py  morse_signals.py  place_coral.py  shift.py  target_hps.py  target_reef.py  target_reef_old.py  target_tag.py
src/subsystems/: arm.py  chassis.py  claw.py  climber.py  drive.py  elevator.py  end_effector.py  manipulator_controller.py  odometry.py  periscope.py  pivot.py  swerve.py  turn_signals.py  vision.py  wrist.py
src/utils/: __init__.py  graph.py
